# delacroix

./: .gitignore  LICENSE  README.md  explore_types.py  harvest.py  pyproject.toml  setup.py
src/delacroix/: __init__.py  art_knowledge.py  artists.py  cli.py  core.py  knowledge_base.py  query_optimizer.py  types.py
src/delacroix/data/: artists.json  movements.json  paintings.json
